#0,1,0,20210830
	Backburner submiter -1_end and miss last frame bug fixed.
	Backburner submiter can submit Server Group name too.
	Hair cache combine use cache name rather than 'combined' for combined forlder name.
	Press 'Ctrl+Z' while Create Primitive object crash bug fixed.

#0,1,0,20210808
	Backburner tool Inteface cleaned up and some bug fixed.
	Backburner submitter as float dialog added to render menu.
	'New Editor' menu added to 'Windows' menu.

#0,1,0,20210806
	Save/Load button added for backburner setting.
	Backburner can send job for custom version (By default current Blender Version).

#0,1,0,20210726
	In Backburner submiter 'frame per task' added for 'Specific frames' mode too.

#0,1,0,20210722
	Submit to Backburner Operator now create a seprate temp file for render.
	Backburner has an option for submit as suspended or not.
	Pre/Post Render Script operator added under Render Properties/Script.
	Note: just write the name of script in text editor for Pre/Post Render script.

#0,1,0,20210715
	Multiple Hair cache combine operator added to automate the index switch.
	Add a new mode for keep Blender mode keymaps completly untoched.

#0,1,0,20210714
	'bpy.utils.user_resource' issue fixed.

#0,1,0,20210614
	Selection set Copy/past issue fixed.
	Selection set interface simplified.
	'Ctrl + K' Insert Keyframe menu (Max mode).
	'Alt + K' Delete Key (Max mode).
	'Ctrl + Shift + K' 'Set Key Filter' (max mode).
	'Set Key Filter' added to Time slider.

#0,1,0,20210611
	Transfer tool for Rigg Selection set to other Rigg 'Pose mode: Right Panel/Tool/Selection(Pose bone)/Transform/(Copy/Past)'

#0,1,0,20210606
	Auto library override issue fixer caused to crash on heavy secens, disabled for now.

#0,1,0,20210604
	BsMax works with Blender defult with Rightclick select mode too.
	Fix library override issue fix on render time automaticaly.

#0,1,0,20210525
	Light lister list materials with emission (Editable only if Color or Strength slot are free).

#0,1,0,20210517